system/iptables/rules.v4
# Generated by iptables-save v1.8.7 on Tue Jul 28 02:00:11 2026
*mangle
:PREROUTING ACCEPT [77211136:29232991699]
:INPUT ACCEPT [9631793:7687860423]
:FORWARD ACCEPT [67579341:21545131104]
:OUTPUT ACCEPT [8791515:7336778039]
:POSTROUTING ACCEPT [76370856:28881909143]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Tue Jul 28 02:00:11 2026
# Generated by iptables-save v1.8.7 on Tue Jul 28 02:00:11 2026
*raw
:PREROUTING ACCEPT [77211136:29232991699]
:OUTPUT ACCEPT [8791515:7336778039]
-A PREROUTING -d 172.18.0.51/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.2/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.29/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.19/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.40/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.48/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.41/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.12/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.4/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 53 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p udp -m udp --dport 53 -j DROP
-A PREROUTING -d 172.18.0.7/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.52/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 8000 -j DROP
-A PREROUTING -d 172.18.0.10/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.13/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.28/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 172.18.0.8/32 ! -i br-aaef491805ba -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 5678 -j DROP
COMMIT
# Completed on Tue Jul 28 02:00:11 2026
# Generated by iptables-save v1.8.7 on Tue Jul 28 02:00:11 2026
*filter
:INPUT DROP [2:688]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [8791515:7336778039]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -s 172.17.0.0/16 -j ACCEPT
-A INPUT -s 172.18.0.0/16 -j ACCEPT
-A INPUT -d 172.18.0.0/16 -i tailscale0 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -j ts-forward
-A FORWARD -s 172.17.0.0/16 -j ACCEPT
-A FORWARD -s 172.18.0.0/16 -j ACCEPT
-A FORWARD -d 172.18.0.0/16 -i tailscale0 -j ACCEPT
-A FORWARD -d 172.17.0.0/16 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 172.18.0.0/16 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o tailscale0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A DOCKER -d 172.18.0.8/32 ! -i br-aaef491805ba -o br-aaef491805ba -p tcp -m tcp --dport 5678 -j ACCEPT
-A DOCKER -d 172.18.0.12/32 ! -i br-aaef491805ba -o br-aaef491805ba -p udp -m udp --dport 53 -j ACCEPT
-A DOCKER -d 172.18.0.12/32 ! -i br-aaef491805ba -o br-aaef491805ba -p tcp -m tcp --dport 53 -j ACCEPT
-A DOCKER -d 172.18.0.52/32 ! -i br-aaef491805ba -o br-aaef491805ba -p tcp -m tcp --dport 8000 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-aaef491805ba -o br-aaef491805ba -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-aaef491805ba -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-aaef491805ba -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-aaef491805ba -j ACCEPT
-A DOCKER-USER -i eth0 -p tcp -m tcp --dport 53 -j DROP
-A DOCKER-USER -i eth0 -p udp -m udp --dport 53 -j DROP
-A DOCKER-USER -j RETURN
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.111.111.100/32 -i lo -j ACCEPT
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
COMMIT
# Completed on Tue Jul 28 02:00:11 2026
# Generated by iptables-save v1.8.7 on Tue Jul 28 02:00:11 2026
*nat
:PREROUTING ACCEPT [602221:62822482]
:INPUT ACCEPT [112090:7221737]
:OUTPUT ACCEPT [411731:26511979]
:POSTROUTING ACCEPT [369678:23960551]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -o docker0 -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o br-aaef491805ba -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-aaef491805ba -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -d 172.17.0.0/16 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -d 172.18.0.0/16 -j MASQUERADE
-A POSTROUTING -s 172.18.0.12/32 -d 172.18.0.12/32 -p tcp -m tcp --dport 53 -j MASQUERADE
-A POSTROUTING -s 172.18.0.12/32 -d 172.18.0.12/32 -p udp -m udp --dport 53 -j MASQUERADE
-A POSTROUTING -s 172.18.0.52/32 -d 172.18.0.52/32 -p tcp -m tcp --dport 8000 -j MASQUERADE
-A POSTROUTING -s 172.18.0.8/32 -d 172.18.0.8/32 -p tcp -m tcp --dport 5678 -j MASQUERADE
-A DOCKER -d 127.0.0.1/32 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 172.18.0.52:8000
-A DOCKER -d 127.0.0.1/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 172.18.0.12:53
-A DOCKER -d 127.0.0.1/32 -p udp -m udp --dport 53 -j DNAT --to-destination 172.18.0.12:53
-A DOCKER -d 127.0.0.1/32 -p tcp -m tcp --dport 5678 -j DNAT --to-destination 172.18.0.8:5678
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Tue Jul 28 02:00:11 2026
